--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
       </div>
     </header>
   <nav>
-    <a href="Lab2Ex2.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="blog.html">Blog</a>
     <a href="contact.html">Contact</a>
